Исправил опечатку в третьей лекции

--- a/03-functions/index.html
+++ b/03-functions/index.html
@@ -70,7 +70,7 @@ $ npm install
             <section>
                 <h2>npm install</h2>
                 <pre class="size-M javascript"><code data-trim>
-// packaje.json
+// package.json
 {
     dependencies: {
         jscs: "^2.2.1"
@@ -91,7 +91,7 @@ $ npm run lint
             <section>
                 <h2>npm run lint</h2>
                 <pre class="size-M javascript"><code data-trim>
-// packaje.json
+// package.json
 {
     scripts: {
         lint: "jscs ."
